--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.8",
+    "@typescript-eslint/eslint-plugin": "6.19.1",
+    "@typescript-eslint/parser": "6.19.1",
+    "eslint": "8.56.0",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@fastify/swagger": "^8.14.0",
+    "@prisma/client": "5.8.1",
     "chalk": "^5.3.0",
-    "fastify": "^4.25.2"
+    "dotenv": "16.4.1",
+    "fastify": "^4.25.2",
+    "prisma": "5.8.1",
+    "zod": "3.22.4"
   }
 }
