--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.8",
+    "@types/react": "18.2.48",
     "@typescript-eslint/eslint-plugin": "6.19.1",
     "@typescript-eslint/parser": "6.19.1",
     "@vitest/coverage-v8": "1.2.2",
@@ -29,12 +30,21 @@
     "vitest": "1.2.2"
   },
   "dependencies": {
+    "@fastify/cookie": "9.3.1",
+    "@fastify/cors": "9.0.0",
+    "@fastify/jwt": "8.0.0",
     "@fastify/swagger": "^8.14.0",
+    "@paralleldrive/cuid2": "2.2.2",
     "@prisma/client": "5.8.1",
+    "@react-email/components": "0.0.14",
     "chalk": "^5.3.0",
+    "dayjs": "1.11.10",
     "dotenv": "16.4.1",
     "fastify": "^4.25.2",
     "prisma": "5.8.1",
+    "react-email": "2.0.0",
+    "resend": "3.1.0",
     "zod": "3.22.4"
-  }
+  },
+  "types": "/src/@types/fastify.d.ts"
 }
